
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct Program {unsigned int id; } ;
struct TYPE_3__ {int nb_prg; struct Program* prg; } ;
typedef TYPE_1__ MpegTSContext ;



__attribute__((used)) static struct Program * get_program(MpegTSContext *ts, unsigned int programid)
{
    int i;
    for (i = 0; i < ts->nb_prg; i++) {
        if (ts->prg[i].id == programid) {
            return &ts->prg[i];
        }
    }
    return ((void*)0);
}
